# intergif

./: .gitignore  CMakeLists.txt
examples/: Makefile,fe1  ReadMe  igexample.c  makefile.ros
src/: Makefile,fe1  animlib.c  animlib.h  cfsi.c  cfsi.h  colmatch.c  commonpal.c  count.c  frame.c  from.c  fromfile.c  gifdecode.c  gifencode.c  intergif.c  join.c  loaddraw.c  loadgif.c  loadjpeg.c  loadpng.c  loadsprite.c  loadtca.c  main.c  makefile.ros  mediancut.c  modes.c  palettemap.c  riscos.s  savegif.c  savesprite.c  split.c  split.h  sprite.h  tca.h  utils.c  utils.h  utilsro.c  window.c  workspace.c
viewersrc/: Makefile,fe1  makefile.ros  viewer.c  winview.c
